@@ -366,6 +366,7 @@ migrationRecordType.option.Encryptors   = Encryptors
 migrationRecordType.option.Holidays     = Holidays
 migrationRecordType.option.Jobs         = Jobs
 migrationRecordType.option.Parameters   = Parameters
+migrationRecordType.option.Pipelines    = Pipelines
 migrationRecordType.option.ReportGroups = Report Groups
 migrationRecordType.option.Reports      = Reports
 migrationRecordType.option.Roles        = Roles
