@@ -366,6 +366,7 @@ migrationRecordType.option.Encryptors   = Yanayosimba fiche
 migrationRecordType.option.Holidays     = Siku kuu
 migrationRecordType.option.Jobs         = Kazi
 migrationRecordType.option.Parameters   = Vipengele
+migrationRecordType.option.Pipelines    = Mabomba
 migrationRecordType.option.ReportGroups = Vikundi-Ripoti
 migrationRecordType.option.Reports      = Ripoti
 migrationRecordType.option.Roles        = Madaraka
